# donetick-api-client

./: README.md  pyproject.toml
src/donetick/: __init__.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_async.py  test_tasks.py  test_things.py
